--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.android.uraall.mycontacts"
+        applicationId "com.android.sergeiekgaus.mycontacts"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
